--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@
     url("./fonts/Poppins-Regular.ttf") format("truetype");
 }
 
+::placeholder {
+  color: var(--color-Light-grey);
+}
+
 body {
   font-family: "Poppins", system-ui;
   font-size: 32px;
@@ -51,7 +55,7 @@ input[type="number"]::-webkit-outer-spin-button {
 label {
   text-transform: uppercase;
   font-size: 14px;
-  letter-spacing: 25%;
+  letter-spacing: 0.3em;
   color: var(--color-Smokey-grey);
   display: block;
   margin: 0 0 8px 0;
@@ -83,7 +87,7 @@ label {
   width: 100%;
   border: 0.5px solid var(--color-Light-grey);
   height: 0;
-  margin: 40px 0;
+  margin: 50px 0;
   position: relative;
 }
 
@@ -96,7 +100,7 @@ label {
   height: 80px;
   width: 80px;
   border-radius: 50%;
-  padding: 25px;
+  padding: 18px;
 }
 
 .result {
